commit translated contents

--- a/articles/active-directory/verifiable-credentials/TOC.yml
+++ b/articles/active-directory/verifiable-credentials/TOC.yml
@@ -48,3 +48,13 @@
       href: verifiable-credentials-faq.md
     - name: Erstellen eines Entwicklerkontos
       href: how-to-create-a-free-developer-account.md
+    - name: 'Branchenarbeitsgruppe für alle Aspekte der dezentralisierten Identität (Decentralized ID, DID)'
+      href: 'https://identity.foundation'
+    - name: Whitepaper zu Microsoft DID
+      href: 'http://aka.ms/didwhitepaper'
+    - name: Übersicht über DID-Marketing
+      href: 'http://aka.ms/didexplained'
+    - name: Blog zur dezentralisierten Identität
+      href: 'https://techcommunity.microsoft.com/t5/tag/decentralized%20identity/tg-p'
+    - name: Videoübersicht über dezentralisierte Identitäten
+      href: 'https://www.youtube.com/watch?v=Whc9Im-U0Wg'
