--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -58,6 +58,8 @@
   items:
     - name: Verwaltete Identitäten und Azure-VMs
       href: how-managed-identities-work-vm.md
+    - name: Empfehlungen zu bewährten Methoden
+      url: managed-identity-best-practice-recommendations.md
 - name: Anleitungen
   items:
     - name: Konfigurieren von verwalteten Identitäten auf virtuellen Computern
