--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -48,14 +48,14 @@
           href: quickstarts/voice-video-calling/calling-client-samples.md
         - name: Beitreten mit einer Telefonie-App zu einer Teams-Besprechung
           href: quickstarts/voice-video-calling/get-started-teams-interop.md
-    - name: Benutzeroberflächen-Framework
+    - name: UI-Bibliothek
       items:
         - name: Erste Schritte mit zusammengesetzten Komponenten
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-composites--page'
+          href: 'https://azure.github.io/communication-ui-library/?path=/story/quickstarts-get-started-with-composites--page'
         - name: Erste Schritte mit einem zustandsbehafteten Client
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-stateful-client--page'
+          href: 'https://azure.github.io/communication-ui-library/?path=/story/quickstarts-get-started-with-stateful-client--page'
         - name: Erste Schritte mit Benutzeroberflächenkomponenten
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-ui-components--page'
+          href: 'https://azure.github.io/communication-ui-library/?path=/story/quickstarts-get-started-with-ui-components--page'
 - name: Tutorials
   expanded: false
   items:
@@ -139,7 +139,7 @@
       href: concepts/troubleshooting-info.md
 - name: Proben
   items:
-    - name: Übersicht
+    - name: Überblick
       href: samples/overview.md
     - name: Hero-Beispiel für Gruppenanrufe
       href: samples/calling-hero-sample.md
