commit translated contents

--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -32,6 +32,8 @@
       href: quickstart-custom-container.md
     - name: App mit mehreren Containern
       href: quickstart-multi-container.md
+    - name: App in Azure Arc (Vorschau)
+      href: quickstart-arc.md
 - name: Tutorials
   items:
     - name: Zugreifen auf Speicher und Microsoft Graph durch eine sichere App
@@ -110,6 +112,8 @@
       href: operating-system-functionality.md
     - name: Best Practices für die Bereitstellung
       href: deploy-best-practices.md
+    - name: Azure Arc-Hosting (Vorschau)
+      href: overview-arc-integration.md
     - name: Sicherheit
       items:
         - name: Empfehlungen
@@ -279,6 +283,8 @@
           href: app-service-undelete.md
         - name: Wiederherstellen aus der ausgefallenen Region
           href: manage-disaster-recovery.md
+        - name: Aktivieren in Azure Arc
+          href: manage-create-arc-environment.md
     - name: Verschieben einer App
       items:
         - name: Verschieben zwischen Regionen
