--- a/articles/cognitive-services/metrics-advisor/index.yml
+++ b/articles/cognitive-services/metrics-advisor/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
-title: Dokumentation zu Metrics Advisor
+title: Dokumentation zu Azure Metrics Advisor
 summary: Bei Metrics Advisor handelt es sich um eine Plattform für die Zeitreihenüberwachung mit APIs für die Datenerfassung, Anomalieerkennung und Diagnose, die ohne Machine Learning-Kenntnisse genutzt werden können.
 metadata:
-  title: 'Dokumentation zu Metrics Advisor: Tutorials, API-Referenz – Azure Cognitive Services | Microsoft-Dokumentation'
-  titleSuffix: Azure Cognitive Services
+  title: 'Dokumentation zu Azure Metrics Advisor: Tutorials, API-Referenz – Azure Applied AI Services | Microsoft-Dokumentation'
+  titleSuffix: Azure Applied AI Services
   services: cognitive-services
   description: Bei Metrics Advisor handelt es sich um eine Plattform für die Zeitreihenüberwachung mit APIs für die Datenerfassung, Anomalieerkennung und Diagnose, die ohne Machine Learning-Kenntnisse genutzt werden können.
   author: mrbullwinkle
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 08/13/2020
   ms.author: mbullwin
-  ms.openlocfilehash: 82029d4547f840d838b371fe42c8ec727a57fa2d
-  ms.sourcegitcommit: dda0d51d3d0e34d07faf231033d744ca4f2bbf4a
+  ms.openlocfilehash: 9779d1b024782f723ab9991a09daa2f859bb1539
+  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/05/2021
-  ms.locfileid: "102201548"
+  ms.lasthandoff: 05/25/2021
+  ms.locfileid: "110367288"
 landingContent:
 - title: Informationen zu Metrics Advisor
   linkLists:
@@ -26,6 +26,8 @@ landingContent:
     links:
     - text: Was ist Metrics Advisor?
       url: overview.md
+    - text: Was ist Azure Applied AI Services?
+      url: ../../applied-ai-services/what-are-applied-ai-services.md
   - linkListType: quickstart
     links:
     - text: Überwachen Ihrer ersten Metrik im Web
