--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -75,11 +75,11 @@
       items:
         - name: Trainieren und Bereitstellen mit der CLI
           href: tutorial-train-deploy-model-cli.md
+        - name: Zugreifen auf Azure-Ressourcen mit verwalteten Endpunkten
+          href: tutorial-deploy-managed-endpoints-using-system-managed-identity.md
     - name: Visual Studio Code
       items:
-        - name: Einrichten der Erweiterung für Azure Machine Learning
-          href: tutorial-setup-vscode-extension.md
-        - name: Trainieren und Bereitstellen eines TensorFlow-Bildklassifizierungsmodells
+        - name: Trainieren eines TensorFlow-Bildklassifizierungsmodells
           href: tutorial-train-deploy-image-classification-model-vscode.md
     - name: Microsoft Power BI-Integration
       items:
@@ -134,6 +134,8 @@
       href: concept-workspace.md
     - name: Umgebungen
       href: concept-environments.md
+    - name: Vordefinierte Docker-Images für Rückschlüsse
+      href: concept-prebuilt-docker-images-inference.md
     - name: Compute-Instanz
       displayName: 'resource, dsvm, Data Science Virtual Machine'
       href: concept-compute-instance.md
@@ -157,6 +159,8 @@
     - name: Deep Learning
       displayName: 'deep learning vs machine learning, deep learning, vs, versus'
       href: concept-deep-learning-vs-machine-learning.md
+    - name: Endpunkte
+      href: concept-endpoints.md
     - name: Modellverwaltung (MLOps)
       displayName: 'deploy, deployment, publish, production, operationalize, operationalization'
       href: concept-model-management-and-deployment.md
@@ -283,6 +287,9 @@
           href: how-to-create-attach-compute-studio.md
     - name: Einrichten Ihrer Umgebung
       items:
+        - name: Installieren und Einrichten der 2.0 CLI
+          displayName: 'azurecli, mlops'
+          href: how-to-configure-cli.md
         - name: Einrichten von Entwicklungsumgebungen
           displayName: 'local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB'
           href: how-to-configure-environment.md
@@ -305,8 +312,11 @@
         - name: Festlegen von Eingabe- und Ausgabeverzeichnissen
           displayName: 'large data, write, experiment files, size limit'
           href: how-to-save-write-experiment-files.md
-        - name: Visual Studio Code
+        - name: "Einrichten der VS\_Code-Erweiterung"
           displayName: 'Visual Studio Code, VSCode, debug, bugs, remote, compute, instance'
+          href: how-to-setup-vs-code.md
+        - name: Herstellen einer Verbindung mit einer Compute-Instanz in VS Code
+          displayName: 'Visual Studio Code, VSCode, debug, bugs'
           href: how-to-set-up-vs-code-remote.md
         - name: Git-Integration
           displayName: github gitlab
@@ -371,6 +381,8 @@
               href: how-to-differential-privacy.md
     - name: Trainieren von Modellen
       items:
+        - name: "Trainieren mit der 2.0\_CLI"
+          href: how-to-train-cli.md
         - name: Konfigurieren und Übermitteln einer Trainingsausführung
           displayName: 'run config, script run config, scriptrunconfig, compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
           href: how-to-set-up-training-targets.md
@@ -387,6 +399,8 @@
           href: how-to-train-pytorch.md
         - name: Trainieren mit einem benutzerdefinierten Docker-Image
           href: how-to-train-with-custom-image.md
+        - name: Trainieren mit der REST-API
+          href: how-to-train-with-rest.md
         - name: Migrieren von Schätzern zu ScriptRunConfig
           href: how-to-migrate-from-estimators-to-scriptrunconfig.md
         - name: Nachverfolgen und Überwachen des Trainings
@@ -424,6 +438,9 @@
         - name: Nachverfolgen von Azure Databricks-Ausführungen mit MLflow
           displayName: 'log, monitor, deploy, metrics, databricks'
           href: how-to-use-mlflow-azure-databricks.md
+        - name: Trainieren von Experimenten mit MLflow-Projekten
+          displayName: 'log, monitor, metrics, model registry, register'
+          href: how-to-train-mlflow-projects.md
         - name: Bereitstellen von MLflow-Modellen
           displayName: 'log, monitor, deploy, metrics, databricks, aci, aks'
           href: how-to-deploy-mlflow-models.md
@@ -461,6 +478,30 @@
         - name: 'Bereitstellung: wo und wie'
           displayName: 'publish, web, service, operationalize, aks, kubernetes, aci, container, cli, consume, docker'
           href: how-to-deploy-and-where.md
+        - name: Bereitstellen und Verarbeiten mit Endpunkten
+          items:
+            - name: Online
+              items:
+                - name: Bereitstellen eines ML-Modells mit einem verwalteten Onlineendpunkt
+                  href: how-to-deploy-managed-online-endpoints.md
+                - name: Sicherer Rollout für Onlineendpunkte
+                  href: how-to-safely-rollout-managed-endpoints.md
+                - name: Verwenden verwalteter Onlineendpunkte in Studio
+                  href: how-to-use-managed-online-endpoint-studio.md
+                - name: Anzeigen der Kosten für verwaltete Onlineendpunkte
+                  href: how-to-view-online-endpoints-costs.md
+                - name: 'Verwaltete Onlineendpunkte: Liste der VM-SKUs'
+                  href: reference-managed-online-endpoints-vm-sku-list.md
+                - name: Überwachen verwalteter Onlineendpunkte
+                  href: how-to-monitor-online-endpoints.md
+                - name: Problembehandlung für verwaltete Onlineendpunkte
+                  href: how-to-troubleshoot-managed-online-endpoints.md
+            - name: Batch
+              items:
+                - name: Batchbewertung mit Batchendpunkten
+                  href: how-to-use-batch-endpoint.md
+                - name: Problembehandlung für Batchendpunkte
+                  href: how-to-troubleshoot-batch-endpoints.md
         - name: Bereitstellungsziele
           items:
             - name: Lokal
@@ -487,6 +528,14 @@
               href: ../iot-edge/tutorial-deploy-machine-learning.md?context=azure%2fmachine-learning%2fservice%2fcontext%2fml-context
             - name: FPGA-Rückschluss
               href: how-to-deploy-fpga-web-service.md
+        - name: Vordefinierte Docker-Images
+          items:
+            - name: Erweiterbarkeit von Python
+              href: how-to-prebuilt-docker-images-inference-python-extensibility.md
+            - name: Erweiterbarkeit von Dockerfile
+              href: how-to-extend-prebuilt-docker-image-inference.md
+            - name: Problembehandlung für vordefinierte Docker-Images
+              href: how-to-troubleshoot-prebuilt-docker-image-inference.md
         - name: Behandeln von Problemen bei der Bereitstellung
           href: how-to-troubleshoot-deployment.md
         - name: Behandeln von Problemen bei der Bereitstellung (lokal)
@@ -524,7 +573,7 @@
         - name: Bereitstellen von Designermodellen
           displayName: 'designer, studio'
           href: how-to-deploy-model-designer.md
-        - name: (Vorschau) Bereitstellung ohne Code
+        - name: Bereitstellung ohne Code
           displayName: no code
           href: how-to-deploy-no-code-deployment.md
         - name: Paketmodelle
@@ -632,6 +681,8 @@
       href: 'https://azure.microsoft.com/pricing/details/machine-learning-services/'
     - name: Diensteinschränkungen
       href: resource-limits-quotas-capacity.md
+    - name: Conda-Lizenzierung
+      href: /legal/machine-learning/conda-licensing
     - name: Regionale Verfügbarkeit
       href: 'https://azure.microsoft.com/regions/services/'
     - name: Benutzerforum
