--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: laujan
   ms.author: lajanuar
   ms.date: 09/05/2019
-  ms.openlocfilehash: d3dd7c5a9befd00c51f6ec40fdc1ee304ea55db3
-  ms.sourcegitcommit: 4b0e424f5aa8a11daf0eec32456854542a2f5df0
+  ms.openlocfilehash: 2d38f9dd270bb3c3ffb304206edbefe6ab4db165
+  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/20/2021
-  ms.locfileid: "107784297"
+  ms.lasthandoff: 05/25/2021
+  ms.locfileid: "110374473"
 landingContent:
 - title: Informationen zur Formularerkennung
   linkLists:
@@ -24,122 +24,184 @@ landingContent:
     links:
     - text: Was ist die Formularerkennung?
       url: overview.md
+    - text: Was sind die Azure Applied AI Services?
+      url: https://aka.ms/applied-ai-services-hub
   - linkListType: whats-new
     links:
     - text: Neuerungen in der Formularerkennung
       url: whats-new.md
   - linkListType: video
     links:
-    - text: KI-basierte Prozessautomatisierung mit Formularerkennung
+    - text: Extrahieren von Daten aus Dokumenten und Formularen
+      url: https://channel9.msdn.com/Shows/AI-Show/Extracting-Data-From-Documents-and-Forms-with-OCR-and-Form-Recognizer
+    - text: RKI-gesteuerte Prozessautomatisierung
       url: https://channel9.msdn.com/Shows/AI-Show/Learn-about-AI-powered-robotic-process-automation-with-Form-Recognizer
+    - text: Neueste Funktionen und Aktualisierungen
+      url: https://channel9.msdn.com/Shows/AI-Show/Whats-New-with-Form-Recognizer
+- title: Extrahieren von Daten aus dem Formularlayout
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Layout
+      url: concept-layout.md?
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-layout
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-layout
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#analyze-layout
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-layout
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-layout
+  - linkListType: deploy
+    links:
+    - text: Formularerkennung ausprobieren
+      url: https://fott-2-1.azurewebsites.net/layout-analyze
+- title: Extrahieren von Daten aus Belegen
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Receipts
+      url: concept-receipts.md?
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-receipts
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-receipts
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#analyze-receipts
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-receipts
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-receipts
+- title: Extrahieren von Daten aus Visitenkarten
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Visitenkarten
+      url: concept-business-cards.md
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-business-cards
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-business-cards
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-business-cards
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-business-cards
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-business-cards
+- title: Extrahieren von Daten aus Rechnungen
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Invoices
+      url: concept-invoices.md?
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-invoices
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-invoices
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#analyze-invoices
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-invoices
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-invoices
+  - linkListType: deploy
+    links:
+    - text: Formularerkennung ausprobieren
+      url: https://fott-2-1.azurewebsites.net/prebuilts-analyze
+- title: Extrahieren von Daten aus Identitätsdokumenten
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Identitätsdokumente
+      url: concept-invoices.md
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-identity-documents
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-identity-documents
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#analyze-identity-documents
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-identity-documents
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-identity-documents
+- title: Microsoft Tech-Gemeinschaft
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: Extrahieren von Daten aus PDFs mit oder ohne Code
+      url: https://techcommunity.microsoft.com/t5/azure-ai/extract-data-from-pdfs-using-form-recognizer-with-code-or/ba-p/2214299
+    - text: Mehr Sprachen lesen, IDs und Rechnungen verarbeiten, auf Tabellen trainieren und mehr
+      url: https://techcommunity.microsoft.com/t5/azure-ai/form-recognizer-now-reads-more-languages-processes-ids-and/ba-p/2179428
+    - text: Erstellen einer „persönliche Finanzen“-App mit Formularerkennung
+      url: https://techcommunity.microsoft.com/t5/azure-ai/how-to-build-a-personal-finance-app-using-azure/ba-p/2088995
+    - text: Optimierte Extraktion von Dokumenttabellen
+      url: https://techcommunity.microsoft.com/t5/azure-ai/enhanced-table-extraction-from-documents-with-form-recognizer/ba-p/2058011
+    - text: Verwenden eines Metadaten-gesteuerten Ansatzes zum Extrahieren von Schlüssel-Wert-Paaren
+      url: https://techcommunity.microsoft.com/t5/azure-ai/meta-data-driven-key-value-pairs-extraction-with-azure-form/ba-p/1942595
+    - text: Beschleunigen der Text-, Daten- und Strukturextraktion aus Dokumenten
+      url: https://techcommunity.microsoft.com/t5/azure-ai/accelerate-extraction-of-text-data-and-structure-from-your/ba-p/1507365
+    - text: Automatisieren der Formularverarbeitung zur Steigerung der Produktivität
+      url: https://techcommunity.microsoft.com/t5/azure-ai/get-started-with-automating-form-processing-to-enable/ba-p/1387305
 - title: Trainieren eines benutzerdefinierten Modells und Extrahieren von Daten
   linkLists:
   - linkListType: quickstart
     links:
     - text: Verwenden des .NET SDK
-      url: quickstarts/client-library.md?pivots=programming-language-csharp
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#train-a-custom-model
     - text: Verwenden des Python SDK
-      url: quickstarts/client-library.md?pivots=programming-language-python
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#train-a-custom-model
     - text: Verwenden des Java SDK
-      url: quickstarts/client-library.md?pivots=programming-language-java
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#train-a-custom-model
     - text: Verwenden des JavaScript SDK
-      url: quickstarts/client-library.md?pivots=programming-language-javascript
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#train-a-custom-model
     - text: Mithilfe der REST-API (cURL)
-      url: quickstarts/client-library.md?pivots=programming-language-rest-api
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#train-a-custom-model
   - linkListType: tutorial
     links:
     - text: Extrahieren von Formulardaten im Massenvorgang
       url: tutorial-bulk-processing.md
-- title: Erstellen eines Trainingsdatasets
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Erstellen eines Trainingsdatasets
-      url: build-training-data-set.md
-- title: Trainieren eines benutzerdefinierten Modells mithilfe von Bezeichnungen
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: Gekennzeichnete Daten
-      url: overview.md#train-with-labels
-  - linkListType: quickstart
-    links:
-    - text: Trainieren mithilfe des Samplebezeichnungstools
-      url: quickstarts/label-tool.md
-- title: Extrahieren von Daten aus Belegen
-  linkLists:
-  - linkListType: quickstart
-    links:
-    - text: Verwenden des .NET SDK
-      url: quickstarts/client-library.md?pivots=programming-language-csharp
-    - text: Verwenden des Python SDK
-      url: quickstarts/client-library.md?pivots=programming-language-python
-    - text: Verwenden des Java SDK
-      url: quickstarts/client-library.md?pivots=programming-language-java
-    - text: Verwenden des JavaScript SDK
-      url: quickstarts/client-library.md?pivots=programming-language-javascript
-    - text: Mithilfe der REST-API (cURL)
-      url: quickstarts/client-library.md?pivots=programming-language-rest-api
-  - linkListType: concept
-    links:
-    - text: Konzepte zu Belegen
-      url: concept-receipts.md?
-- title: Extrahieren von Daten aus Visitenkarten
-  linkLists:
-  - linkListType: quickstart
-    links:
-    - text: Verwenden des .NET SDK
-      url: quickstarts/client-library.md?pivots=programming-language-csharp
-    - text: Verwenden des Python SDK
-      url: quickstarts/client-library.md?pivots=programming-language-python
-    - text: Verwenden des Java SDK
-      url: quickstarts/client-library.md?pivots=programming-language-java
-    - text: Verwenden des JavaScript SDK
-      url: quickstarts/client-library.md?pivots=programming-language-javascript
-    - text: Mithilfe der REST-API (cURL)
-      url: quickstarts/client-library.md?pivots=programming-language-rest-api
-  - linkListType: concept
-    links:
-    - text: Konzepte zu Visitenkarten
-      url: concept-business-cards.md?
-- title: Abrufen von Textlayoutinformationen
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: Layoutkonzepte
-      url: concept-layout.md?
-  - linkListType: quickstart
-    links:
-    - text: Verwenden des .NET SDK
-      url: quickstarts/client-library.md?pivots=programming-language-csharp
-    - text: Verwenden des Python SDK
-      url: quickstarts/client-library.md?pivots=programming-language-python
-    - text: Verwenden des Java SDK
-      url: quickstarts/client-library.md?pivots=programming-language-java
-    - text: Verwenden des JavaScript SDK
-      url: quickstarts/client-library.md?pivots=programming-language-javascript
-    - text: Mithilfe der REST-API (cURL)
-      url: quickstarts/client-library.md?pivots=programming-language-rest-api
-- title: Verwenden von Containern
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: Installieren und Ausführen von Containern
-      url: form-recognizer-container-howto.md
-  - linkListType: how-to-guide
-    links:
-    - text: Konfigurieren von Containern
-      url: form-recognizer-container-configuration.md
   - linkListType: deploy
     links:
-    - text: Verwenden von Containerinstanzen
-      url: ../containers/azure-container-instance-recipe.md
-- title: Verweis
+    - text: Formularerkennung ausprobieren
+      url: https://fott-2-1.azurewebsites.net/
+- title: Analysieren Sie Formulare mit Ihrem benutzerdefiniertem Modell
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Verwenden des .NET SDK
+      url: quickstarts/client-library.md?pivots=programming-language-csharp&tabs=preview%2Cv2-1#analyze-forms-with-a-custom-model
+    - text: Verwenden des Python SDK
+      url: quickstarts/client-library.md?pivots=programming-language-python&tabs=preview%2Cv2-1#analyze-forms-with-a-custom-model
+    - text: Verwenden des Java SDK
+      url: quickstarts/client-library.md?pivots=programming-language-java&tabs=preview%2Cv2-1#analyze-forms-with-a-custom-model
+    - text: Verwenden des JavaScript SDK
+      url: quickstarts/client-library.md?pivots=programming-language-javascript&tabs=preview%2Cv2-1#analyze-forms-with-a-custom-model
+    - text: Mithilfe der REST-API (cURL)
+      url: quickstarts/client-library.md?pivots=programming-language-rest-api&tabs=preview%2Cv2-1#analyze-forms-with-a-custom-model
+- title: Erste Schritte mit dem Etikettier-Tool
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Verwenden des Etikettier-Tools
+      url: label-tool.md
+- title: API und Clientbibliotheken
   linkLists:
   - linkListType: reference
     links:
-    - text: Formularerkennungs-API Version 2.1 (preview.3)
-      url: https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-3/operations/AnalyzeWithCustomForm
+    - text: Formularerkennung-API Version 2.1
+      url: https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1/operations/AnalyzeWithCustomForm
     - text: .NET SDK
       url: /dotnet/api/overview/azure/ai.formrecognizer-readme
     - text: Python SDK
@@ -148,10 +210,6 @@ landingContent:
       url: /java/api/overview/azure/ai-formrecognizer-readme
     - text: JavaScript SDK
       url: /javascript/api/overview/azure/ai-form-recognizer-readme
-    - text: Azure PowerShell
-      url: /powershell/module/az.cognitiveservices/#cognitive_services
-    - text: Azure-Befehlszeilenschnittstelle (CLI)
-      url: /cli/azure/cognitiveservices#az_cognitiveservices_list
 - title: Hilfe und Feedback
   linkLists:
   - linkListType: reference
