--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -102,7 +102,7 @@
           href: cache-private-link.md
         - name: Aktivieren der Zonenredundanz
           href: cache-how-to-zone-redundancy.md
-        - name: Einrichten der OSS-Georeplikation
+        - name: Einrichten der Georeplikation
           href: cache-how-to-geo-replication.md
         - name: Einrichten der aktiven Georeplikation für Unternehmen
           href: cache-how-to-active-geo-replication.md
