--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -413,6 +413,42 @@
       href: /azure/templates/microsoft.compute/virtualmachinescalesets
     - name: Azure Policy-Integrationen
       displayName: 'samples, policies, definitions'
-      href: ./policy-reference.md
+      href: ../virtual-machines/policy-reference.md
 - name: Ressourcen
-  items: null
+  items:
+    - name: Cloud Adoption Framework
+      href: /azure/cloud-adoption-framework/get-started/
+    - name: Architekturcenter
+      href: /azure/architecture/
+    - name: Migrationstools
+      href: /azure/cloud-adoption-framework/migrate/azure-migration-guide/?tabs=MigrationTools
+    - name: Microsoft Q&A (Fragen und Antworten)
+      href: /answers/topics/azure-virtual-machines.html
+    - name: Azure-Schnellstartvorlagen
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Compute&pageNumber=1&sort=Popular'
+    - name: Preise
+      href: 'https://azure.microsoft.com/pricing/details/#Linux'
+    - name: Regionale Verfügbarkeit
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Erweitern Ihrer Fähigkeiten mit Microsoft Learn
+      href: /learn/browse/?products=azure-virtual-machines
+    - name: Azure-Roadmap
+      href: 'https://azure.microsoft.com/roadmap/?category=compute'
+    - name: Preisrechner
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Allgemeine CLI-Befehle
+      href: ../virtual-machines/linux/cli-manage.md
+    - name: Allgemeine PowerShell-Befehle
+      href: ../virtual-machines/windows/ps-common-ref.md
+    - name: Allgemeine PowerShell-Netzwerkbefehle
+      href: ../virtual-machines/windows/ps-common-network-ref.md
+    - name: Beschreibung der VM-Vorlage
+      href: ../virtual-machines/windows/template-description.md
+    - name: Häufig gestellte Fragen
+      items:
+        - name: Linux
+          href: ../virtual-machines/linux/faq.md
+        - name: Windows
+          href: ../virtual-machines/windows/faq.md
+- name: Support und Problembehandlung
+  href: vmss-support-help.md
