--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -7,12 +7,12 @@ metadata:
   ms.topic: landing-page
   ms.service: app-service
   ms.date: 08/06/2020
-  ms.openlocfilehash: 949dcf3700388036252c45fd0eaef2e96e9083be
-  ms.sourcegitcommit: 14cd60fe58964acd4bccb6053f36e60d5848edc0
+  ms.openlocfilehash: 2709081bd38acb1cc3aab1ae7b9c35e58e97b16f
+  ms.sourcegitcommit: 80d311abffb2d9a457333bcca898dfae830ea1b4
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/12/2021
-  ms.locfileid: "109795349"
+  ms.lasthandoff: 05/26/2021
+  ms.locfileid: "110461585"
 landingContent:
 - title: Informationen zu App Service
   linkLists:
@@ -194,13 +194,13 @@ landingContent:
   linkLists:
   - linkListType: concept
     links:
-    - text: App Service, Functions und Logic Apps in Azure Arc (Vorschau)
+    - text: App Service, Funktionen und Logic Apps in Azure Arc (Vorschau)
       url: overview-arc-integration.md
-  - linkListType: tutorial
-    links:
-    - text: Einrichten eines Kubernetes-Clusters mit Azure Arc-Unterstützung zum Ausführen von App Service, Funktionen und Logic Apps (Vorschau)
-      url: quickstart-arc.md
   - linkListType: quickstart
     links:
     - text: Erstellen einer App Service-App in Azure Arc (Vorschau)
-      url: https://azure.microsoft.com/updates/?product=app-service
+      url: quickstart-arc.md
+  - linkListType: tutorial
+    links:
+    - text: Einrichten eines Kubernetes-Clusters mit Azure Arc-Unterstützung zum Ausführen von App Service, Funktionen und Logic Apps (Vorschau)
+      url: manage-create-arc-environment.md
