--- a/articles/azure-vmware/breadcrumbs/toc.yml
+++ b/articles/azure-vmware/breadcrumbs/toc.yml
@@ -9,7 +9,7 @@
         - name: Migrieren von Workloads
           tocHref: /azure/migrate/
           topicHref: /azure/azure-vmware/
-        - name: Standortwiederherstellung
+        - name: Azure Site Recovery
           tocHref: /azure/site-recovery/
           topicHref: /azure/azure-vmware/
         - name: Azure Backup Server
