--- a/articles/logic-apps/index.yml
+++ b/articles/logic-apps/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: ecfan
   ms.author: estfan; logicappspm
   ms.date: 03/24/2021
-  ms.openlocfilehash: 55f2be9b738e91c076d918cf19ddd5d55d445e20
-  ms.sourcegitcommit: a5dd9799fa93c175b4644c9fe1509e9f97506cc6
+  ms.openlocfilehash: e49682f79efb102ccf71a184b77b74e0c6df3fbc
+  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/28/2021
-  ms.locfileid: "108204961"
+  ms.lasthandoff: 05/25/2021
+  ms.locfileid: "110372979"
 landingContent:
 - title: Informationen zu Azure Logic Apps
   linkLists:
@@ -23,17 +23,15 @@ landingContent:
     links:
     - text: Was ist Azure Logic Apps?
       url: logic-apps-overview.md
+    - text: Umgebungen mit einem Mandanten und mehreren Mandanten bzw. Integrationsdienstumgebung
+      url: single-tenant-overview-compare.md
+    - text: Was ist Logic Apps mit Azure Arc-Unterstützung?
+      url: azure-arc-enabled-logic-apps-overview.md
   - linkListType: concept
     links:
     - text: Übersicht über Connectors für Azure Logic Apps
       url: ../connectors/apis-list.md
-    - text: Verwaltete Connectors
-      url: ../connectors/managed.md
-    - text: Verfügbare Connectors für Azure Logic Apps
-      url: /connectors/connector-reference/connector-reference-logicapps-connectors
-    - text: Integrierte Trigger und Aktionen
-      url: ../connectors/built-in.md
-    - text: Planen wiederkehrender Workflows
+    - text: Serienzeitpläne für Workflows
       url: concepts-schedule-automated-recurring-tasks-workflows.md
     - text: B2B-Unternehmensintegration
       url: logic-apps-enterprise-integration-overview.md
@@ -157,6 +155,8 @@ landingContent:
       url: logic-apps-limits-and-config.md
     - text: Preismodell
       url: logic-apps-pricing.md
+    - text: Verweis auf verfügbare Connectors für Azure Logic Apps
+      url: /connectors/connector-reference/connector-reference-logicapps-connectors
     - text: Schema für die Workflowdefinitionssprache
       url: logic-apps-workflow-definition-language.md
     - text: Azure PowerShell
