--- a/articles/cognitive-services/immersive-reader/index.yml
+++ b/articles/cognitive-services/immersive-reader/index.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Landing
-title: Dokumentation zum plastischen Reader
+title: Dokumentation zum plastischen Reader in Azure
 summary: Der plastische Reader ist ein Tool, das bewährte Techniken implementiert, um das Leseverständnis von Leseanfängern, Sprachenlernenden und Personen mit Lernunterschieden zu verbessern. Implementieren Sie den plastischen Reader in Ihrer Webanwendung mithilfe des Immersive Reader SDK.
 metadata:
-  title: Dokumentation zum plastischen Reader
+  title: Dokumentation zum plastischen Reader in Azure
   description: Der plastische Reader ist ein Tool, das bewährte Techniken implementiert, um das Leseverständnis von Leseanfängern, Sprachenlernenden und Personen mit Lernunterschieden zu verbessern. Implementieren Sie den plastischen Reader in Ihrer Webanwendung mithilfe des Immersive Reader SDK.
   services: service
   ms.service: cognitive-services
@@ -12,12 +12,12 @@ metadata:
   author: IEvangelist
   ms.author: dapine
   ms.date: 01/23/2020
-  ms.openlocfilehash: 4cc05d3b99530e5ba923bfcbf7f749fbcd1c0f20
-  ms.sourcegitcommit: d135e9a267fe26fbb5be98d2b5fd4327d355fe97
+  ms.openlocfilehash: dff95a1989d8ff55658227cf135d3e2fc687ec0f
+  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/10/2021
-  ms.locfileid: "102616637"
+  ms.lasthandoff: 05/25/2021
+  ms.locfileid: "110377726"
 landingContent:
 - title: Informationen zum plastischen Reader
   linkLists:
@@ -25,6 +25,8 @@ landingContent:
     links:
     - text: Worum handelt es sich beim plastischen Reader?
       url: overview.md
+    - text: Was ist Azure Applied AI Services?
+      url: ../../applied-ai-services/what-are-applied-ai-services.md
   - linkListType: video
     links:
     - text: 'Erste Schritte: kurze technische Videos'
