--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -13,19 +13,19 @@
       href: whats-new.md
 - name: Schnellstarts
   items:
-    - name: Erste Schritte mit der Clientbibliothek oder REST-API
+    - name: Clientbibliotheken und REST-API
       href: quickstarts/client-library.md
-    - name: Verwenden des Beispieltools für Beschriftungen
-      href: quickstarts/label-tool.md
-- name: Proben
+    - name: Erste Schritte mit der Formularerkennung
+      href: quickstarts/get-started-with-form-recognizer.md
+- name: Beispiele
   items:
-    - name: 'C#/.NET: SDK mit Formularerkennungs-Clientbibliothek'
+    - name: C#/.NET
       href: /samples/azure/azure-sdk-for-net/azure-form-recognizer-client-sdk-samples
-    - name: 'Java: SDK mit Formularerkennungs-Clientbibliothek'
+    - name: Java
       href: /samples/azure/azure-sdk-for-java/formrecognizer-java-samples
-    - name: 'Python: SDK mit Formularerkennungs-Clientbibliothek'
+    - name: Python
       href: /samples/azure/azure-sdk-for-python/formrecognizer-samples
-    - name: 'JavaScript: SDK mit Formularerkennungs-Clientbibliothek'
+    - name: JavaScript
       href: /samples/azure/azure-sdk-for-js/ai-form-recognizer-javascript/
 - name: Verantwortungsvolle Verwendung von KI
   items:
@@ -41,12 +41,8 @@
       href: /legal/cognitive-services/form-recognizer/fr-data-privacy-security?context=/azure/cognitive-services/form-recognizer/context/context
 - name: Anleitungen
   items:
-    - name: Erstellen eines Trainingsdatasets
-      href: build-training-data-set.md
-    - name: Verwenden von Tabellentags zum Trainieren des benutzerdefinierten Modells
-      href: supervised-table-tags.md
-    - name: Bereitstellen des Samplebezeichnungstools
-      href: deploy-label-tool.md
+    - name: Trainieren eines benutzerdefinierten Modells mit dem Tool für die Beschriftung von Beispielen
+      href: label-tool.md
     - name: Verwenden von Containern
       items:
         - name: Installieren und Ausführen von Containern
@@ -73,11 +69,8 @@
           href: ../authentication.md?context=/azure/cognitive-services/form-recognizer/context/context
 - name: Konzepte
   items:
-    - name: Layout-API
-      expanded: true
-      items:
-        - name: Extrahieren von Formulardaten
-          href: concept-layout.md
+    - name: Layout
+      href: concept-layout.md
     - name: Benutzerdefinierte Modelle
       href: concept-custom.md
     - name: Receipts
@@ -100,8 +93,8 @@
       href: tutorial-azure-function.md
 - name: Verweis
   items:
-    - name: Formularerkennungs-API Version 2.1 (preview.3)
-      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-3/operations/AnalyzeWithCustomForm'
+    - name: Form Recognizer API v2.1.3
+      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1/operations/AnalyzeWithCustomForm'
     - name: Formularerkennungs-API Version 2.0
       href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
     - name: SDKs
@@ -116,6 +109,10 @@
           href: /javascript/api/overview/azure/ai-form-recognizer-readme
 - name: Ressourcen
   items:
+    - name: Kundenperspektive
+      href: resource-customer-stories.md
+    - name: Azure-Roadmap
+      href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
     - name: Unternehmensfähigkeit
       items:
         - name: Unterstützung für Regionen
@@ -124,7 +121,5 @@
           href: 'https://azure.microsoft.com/support/legal/cognitive-services-compliance-and-privacy/'
     - name: Support- und Hilfeoptionen
       href: ../cognitive-services-support-options.md?context=/azure/cognitive-services/form-recognizer/context/context
-    - name: Azure-Roadmap
-      href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
     - name: Datenschutz und Cookies
       href: 'https://privacy.microsoft.com/en-US/privacystatement'
