commit translated contents

--- a/articles/cognitive-services/metrics-advisor/toc.yml
+++ b/articles/cognitive-services/metrics-advisor/toc.yml
@@ -6,7 +6,7 @@
     - name: Was ist Metrics Advisor?
       href: overview.md
     - name: Preise
-      href: 'http://go.microsoft.com/fwlink/?LinkID=761229'
+      href: 'https://aka.ms/ma-pricing'
     - name: Neuigkeiten
       href: whats-new.md
 - name: Schnellstarts
