commit translated contents

--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 06/23/2020
-  ms.openlocfilehash: 06cce3f999b329d41c7ef7e5f381f55fdaee8054
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: c9697126e64a6fbcdf25ab4904179b4ae08e8e17
+  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88933748"
+  ms.lasthandoff: 05/25/2021
+  ms.locfileid: "110375249"
 landingContent:
 - title: Informationen zu Event Hubs
   linkLists:
@@ -29,6 +29,8 @@ landingContent:
       url: event-hubs-for-kafka-ecosystem-overview.md
     - text: Was ist Event Hubs Capture?
       url: event-hubs-capture-overview.md
+    - text: Was ist Event Hubs Premium?
+      url: event-hubs-premium-overview.md
     - text: Was ist Event Hubs Dedicated?
       url: event-hubs-dedicated-overview.md
 - title: Erstellen eines Ereignis-Hubs
@@ -151,7 +153,7 @@ landingContent:
       url: event-hubs-metrics-azure-monitor.md
     - text: Einrichten von Diagnoseprotokollen
       url: event-hubs-diagnostic-logs.md
-    - text: Automatisches Hochskalieren von Durchsatzeinheiten
+    - text: Automatisches Hochskalieren von Ressourcen
       url: event-hubs-auto-inflate.md
     - text: Problembehandlung bei Ausnahmen
       url: event-hubs-messaging-exceptions.md
