--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -4,14 +4,6 @@
   items:
     - name: Was ist Event Hubs?
       href: event-hubs-about.md
-    - name: Event Hubs für Apache Kafka
-      href: event-hubs-for-kafka-ecosystem-overview.md
-    - name: Event Hubs Capture
-      href: event-hubs-capture-overview.md
-    - name: Event Hubs Dedicated
-      href: event-hubs-dedicated-overview.md
-    - name: Azure-Schemaregistrierung in Event Hubs (Vorschau)
-      href: schema-registry-overview.md
 - name: Schnellstarts
   expanded: true
   items:
@@ -81,6 +73,16 @@
   items:
     - name: Event Hubs-Terminologie
       href: event-hubs-features.md
+    - name: Event Hubs Premium
+      href: event-hubs-premium-overview.md
+    - name: Event Hubs für Apache Kafka
+      href: event-hubs-for-kafka-ecosystem-overview.md
+    - name: Event Hubs Capture
+      href: event-hubs-capture-overview.md
+    - name: Event Hubs Dedicated
+      href: event-hubs-dedicated-overview.md
+    - name: Azure-Schemaregistrierung in Event Hubs (Vorschau)
+      href: schema-registry-overview.md
     - name: Ereignisprozessorhost (Legacy-SDK)
       href: event-hubs-event-processor-host.md
     - name: Ereignisprozessor (aktuelles SDK)
