--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -12,9 +12,9 @@
       href: ./samples/index.md
 - name: Konzepte
   items:
-    - name: Delegierte Azure-Ressourcenverwaltung
-      displayName: 'delegation, projection'
-      href: ./concepts/azure-delegated-resource-management.md
+    - name: Aufbau
+      displayName: 'delegation, projection, resource, registration'
+      href: ./concepts/architecture.md
     - name: Mandantenübergreifende Verwaltungsmöglichkeiten
       displayName: 'scenarios, supported, enhanced, services, limitations, current'
       href: ./concepts/cross-tenant-management-experience.md
@@ -59,8 +59,11 @@
           displayName: 'ARM, template, delegation, authorization, resource management'
           href: ./how-to/onboard-customer.md
         - name: Veröffentlichen von Angeboten für verwaltete Dienste im Azure Marketplace
-          displayName: 'managed services offer, azure marketplace, publish, marketplace'
+          displayName: 'managed services, azure marketplace, publish, marketplace'
           href: ./how-to/publish-managed-services-offers.md
+        - name: Erstellen von berechtigten Autorisierungen
+          displayName: 'jit, pim, elevate, elevation, just-in-time'
+          href: ./how-to/create-eligible-authorizations.md
         - name: Aktualisieren von Delegierungen
           displayName: upgrade
           href: ./how-to/update-delegation.md
