--- a/articles/azure-sql/database/maintenance-window-faq.yml
+++ b/articles/azure-sql/database/maintenance-window-faq.yml
@@ -1,4 +1,4 @@
-### YmlMime:Yml
+### YamlMime:Yml
 ms.openlocfilehash: c4f4cb549e1c91b390370b38aba3e211a2453084
 ms.sourcegitcommit: 20acb9ad4700559ca0d98c7c622770a0499dd7ba
 ms.translationtype: HT
